tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.diagnostic
diagnostic error code=O0001 family=ownership message="cannot immutably borrow mutably borrowed binding 'value'" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.ari" bytes=158
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.ari" line=7 column=36 end_line=7 end_column=39 byte_start=144 byte_end=147 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.ari:7:36\n   |\n 7 |   return needs_both(ref mut value, ref value);\n   |                                    ^^^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.ari" line=6 column=7 end_line=6 end_column=12 byte_start=98 byte_end=103 message="borrowed binding 'value' was declared here"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-borrow-conflict.ari:6:7\n   |\n 6 |   var value = 1;\n   |       ^^^^^"
  Note index=0 location=none message="borrow state is tracked for each binding and overlapping aggregate field"
  Help index=0 location=none message="end the mutable borrow of 'value' before taking a shared borrow"
